Web api funciona 100%

--- a/EjemploApi/appsettings.json
+++ b/EjemploApi/appsettings.json
@@ -1,8 +1,11 @@
-﻿{
+{
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "Context": "Data Source=primerparcialap2.database.windows.net;Initial Catalog=CobrosWebApi;Integrated Security=False;User ID=seatiel;Password=Syr970220;Connect Timeout=15;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   }
 }
